# engineering-brain

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GAPS.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
brain/: README.md  eval_results.json  pyproject.toml
brain/benchmarks/: README.md  __init__.py  __main__.py  cli.py  metrics.py  report_generator.py  results.py  runner.py
brain/benchmarks/ablation/: ablation_runner.py  flag_groups.py  flag_scanner.py
brain/benchmarks/assets/: report.css
brain/benchmarks/baselines/: base.py  brain_system.py  graph_rag.py  naive_rag.py  raw_llm.py
brain/benchmarks/charts/: ablation.py  comparison.py  cost.py  robustness.py  theme.py
brain/benchmarks/cost/: cost_analyzer.py  profiler.py
brain/benchmarks/datasets/: adversarial_v1.yaml  brain_strengths_v1.yaml  golden_v1.yaml  loader.py
brain/benchmarks/robustness/: knowledge_injector.py  robustness_runner.py
brain/benchmarks/templates/: report_base.html.j2  section_ablation.html.j2  section_appendix.html.j2  section_comparison.html.j2  section_cost.html.j2  section_cover.html.j2  section_executive.html.j2  section_methodology.html.j2  section_robustness.html.j2
brain/benchmarks/tests/: test_baselines.py  test_metrics.py  test_report.py  test_runner.py
brain/engineering_brain/: __init__.py  __main__.py  brain_dashboard.html  cli.py  llm_helpers.py  mcp_server.py  technology_implications.yaml
brain/engineering_brain/adapters/: __init__.py  async_embedding.py  base.py  falkordb.py  memory.py  neo4j.py  qdrant.py  redis_cache.py  sharding.py
brain/engineering_brain/agent/: __init__.py  brain_access.py  config.py  llm_client.py  orchestrator.py  parsing.py  runtime_cards.py  types.py  worker.py
brain/engineering_brain/core/: __init__.py  brain.py  brain_factory.py  config.py  schema.py  taxonomy.py  taxonomy_bootstrap.py  types.py
brain/engineering_brain/epistemic/: __init__.py  bayesian_edges.py  bootstrap.py  conflict_resolution.py  contradiction.py  contradiction_tensor.py  dst_evidence.py  edge_opinion.py  epistemic_ladder.py  fusion.py  gap_analysis.py  layer_opinions.py  learned_trust.py  opinion.py  predictive_decay.py  provenance.py  source_trust.py  temporal.py  trust_propagation.py
brain/engineering_brain/export/: __init__.py  pack_mcp_generator.py  pack_mcp_runtime.py
brain/engineering_brain/learning/: __init__.py  adaptive_promotion.py  adaptive_weights.py  cluster_promoter.py  code_pattern_miner.py  cross_layer_inferrer.py  crystallizer.py  link_predictor.py  promoter.py  pruner.py  reinforcer.py  relationship_learner.py
brain/engineering_brain/maps/: __init__.py  human_map.py  llm_map.py
brain/engineering_brain/observability/: __init__.py  cost_tracker.py  dead_letter.py
brain/engineering_brain/observation/: __init__.py  calibrator.py  log.py
brain/engineering_brain/pack_templates/: agent-orchestration.yaml  api-design.yaml  architecture.yaml  code-review.yaml  cognitive-frameworks.yaml  compliance-regulatory.yaml  data-infrastructure.yaml  data-pipeline.yaml  devops-deployment.yaml  exec-implementation.yaml  fact-checking.yaml  financial-mathematics.yaml  fintech-operations.yaml  fintech-trading.yaml  frontend-ux.yaml  full-stack.yaml  incident-response.yaml  llm-agent-pipeline.yaml  mathematical-foundations.yaml  onboarding.yaml  performance.yaml  prediction-markets.yaml  project-maintenance.yaml  qa-review.yaml  realtime-systems.yaml  risk-compliance.yaml  security-review.yaml  spec-analysis.yaml  squad-coordination.yaml  testing.yaml  trading-engine.yaml  web3-blockchain.yaml
brain/engineering_brain/profiles/: data_engineer.yaml  fullstack.yaml  security_engineer.yaml
brain/engineering_brain/retrieval/: __init__.py  bm25.py  brain_profiles.py  budget.py  communities.py  context_extractor.py  context_guard.py  embedder.py  formatter.py  graph_expander.py  guardrails.py  hake_embeddings.py  knowledge_assembler.py  merger.py  ontology_aligner.py  pack_manager.py  pack_manager_v2.py  pack_materializer.py  pack_templates.py  ppr.py  proactive_push.py  reasoning_engine.py  reranker.py  router.py  scorer.py  synonyms.py  tag_embeddings.py  task_knowledge.py  taxonomy_expander.py  (+1 more)
brain/tests/: conftest.py  test_adapters.py  test_adaptive_promotion.py  test_adaptive_weights.py  test_agent_audit_gaps.py  test_agent_brain_access.py  test_agent_config.py  test_agent_llm_client.py  test_agent_orchestrator.py  test_agent_parsing.py  test_agent_runtime_cards.py  test_agent_types.py  test_agent_workers.py  test_bootstrap.py  test_brain_factory.py  test_calibrator.py  test_cluster_promoter.py  test_code_pattern_miner.py  test_conflict_resolution.py  test_context_guard.py  test_contradiction_detector.py  test_cross_consistency.py  test_cross_layer_inferrer.py  test_crystallizer_semantic.py  test_disbelief_axis.py  test_edge_opinion.py  test_embedder.py  test_epistemic.py  test_epistemic_ladder.py  test_epistemic_wave1_modules.py  test_evaluation.py  test_fusion.py  test_gap_analysis.py  test_graph_edges.py  test_graph_expander.py  test_guardrails.py  test_hybrid_retrieval.py  test_knowledge_assembler.py  test_layer_opinions.py  test_learned_trust.py  (+31 more)
cockpit/: Dockerfile  README.md  SYSMAP_AUDIT_2026-03-03.md  docker-compose.yml  package-lock.json  package.json  playwright.config.js  pyproject.toml  vitest.config.js
cockpit/app/: package-lock.json  package.json  vite.config.ts
cockpit/client/: benchmark.html  debug.html  index.html
cockpit/docs/: DIRECTION.md
cockpit/e2e/: accessibility.spec.js  app.spec.js  search.spec.js
cockpit/schemas/: cockpit_schema.json  graph_data.json
cockpit/scripts/: check-bundle-size.sh  export-graph.py  generate-synthetic.py  serve.sh
cockpit/server/: brain_bridge.py  config.py  main.py  reload_manager.py
cockpit/tests/: conftest.py  test_schemas.py  test_server.py
cockpit/themes/: daylight.yaml  midnight.yaml
cockpit/tui/: Cargo.toml  README.md  build.rs  dist-workspace.toml  install.sh
cockpit/vscode/: .vscodeignore  README.md  package-lock.json  package.json
(+541 files in other folders)
