[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engineering-brain"
version = "1.0.0"
description = "Knowledge graph for AI coding agents — 3,700+ curated engineering rules with MCP server"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Gustavo Schneiter" },
]
keywords = [
    "knowledge-graph",
    "llm",
    "ai-agents",
    "mcp",
    "engineering",
    "code-quality",
    "software-engineering",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
fastembed = ["fastembed>=0.3.0"]
voyage = ["voyageai>=0.2.0"]
agent = ["anthropic>=0.40.0"]
backends = [
    "falkordb>=1.0.0",
    "qdrant-client>=1.7.0",
    "redis>=5.0.0",
    "neo4j>=5.0.0",
]
benchmark = [
    "matplotlib>=3.8.0",
    "jinja2>=3.1.0",
    "weasyprint>=60.0",
]
all = [
    "engineering-brain[fastembed]",
    "engineering-brain[voyage]",
    "engineering-brain[backends]",
    "engineering-brain[agent]",
    "engineering-brain[benchmark]",
]

[project.urls]
Homepage = "https://github.com/humangr-lab/engineering-brain"
Documentation = "https://github.com/humangr-lab/engineering-brain#readme"
Repository = "https://github.com/humangr-lab/engineering-brain"
Issues = "https://github.com/humangr-lab/engineering-brain/issues"

[tool.hatch.build.targets.wheel]
packages = ["engineering_brain"]

[tool.hatch.build.targets.wheel.force-include]
"engineering_brain/seeds" = "engineering_brain/seeds"
"engineering_brain/pack_templates" = "engineering_brain/pack_templates"
"engineering_brain/profiles" = "engineering_brain/profiles"
"engineering_brain/templates" = "engineering_brain/templates"
"engineering_brain/technology_implications.yaml" = "engineering_brain/technology_implications.yaml"
"engineering_brain/configs" = "engineering_brain/configs"
