[project]
name = "ontology-map-toolkit"
version = "0.1.0"
description = "Framework for spatial 3D representations of software systems"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Gustavo Schneiter" },
]
keywords = ["ontology", "visualization", "3d", "knowledge-graph", "software-architecture"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pyyaml>=6.0",
    "jsonschema>=4.20.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
]
adapters = [
    "falkordb>=1.0.0",
    "neo4j>=5.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/gustavoschneiter/ontology-map-toolkit"
Documentation = "https://github.com/gustavoschneiter/ontology-map-toolkit#readme"
Repository = "https://github.com/gustavoschneiter/ontology-map-toolkit"
Issues = "https://github.com/gustavoschneiter/ontology-map-toolkit/issues"

[project.scripts]
ontology-map = "ontology_map_toolkit.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["ontology_map_toolkit*", "server*"]

[tool.setuptools.package-data]
ontology_map_toolkit = ["py.typed"]

# -- Ruff -----------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "server", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["ontology_map_toolkit", "server"]

# -- Pytest ----------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "visual: visual regression tests requiring playwright",
]
