[package]
name = "ontology-map-tui"
version = "0.3.0"
description = "Ontology Map — Terminal UI for spatial code architecture visualization"
authors = ["Gustavo Schneiter"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"
homepage = "https://github.com/gustavoschneiter/ontology-map"
repository = "https://github.com/gustavoschneiter/ontology-map"
keywords = ["code-visualization", "architecture", "dependency-graph", "tui", "tree-sitter"]
categories = ["command-line-utilities", "development-tools", "visualization"]
readme = "README.md"
include = ["src/**/*", "build.rs", "Cargo.toml", "LICENSE", "README.md"]
exclude = ["target/", "tests/fixtures/"]

[[bin]]
name = "ontology-map"
path = "src/main.rs"

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# File traversal (gitignore-aware)
ignore = "0.4"
rayon = "1.10"

# AST parsing (tree-sitter)
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Git integration
git2 = "0.19"

# File watching (live reload)
notify = "7"

# Error handling
anyhow = "1"

# Logging
log = "0.4"
env_logger = "0.11"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"

[dev-dependencies]
tempfile = "3"
serde_json = "1.0"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Sensible allows for pedantic overrides
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
too_many_lines = "allow"
struct_excessive_bools = "allow"
doc_markdown = "allow"
unnested_or_patterns = "allow"
manual_let_else = "allow"
unnecessary_wraps = "allow"
match_same_arms = "allow"
if_same_then_else = "allow"
case_sensitive_file_extension_comparisons = "allow"
needless_pass_by_value = "allow"
trivially_copy_pass_by_ref = "allow"
enum_variant_names = "allow"
cast_possible_wrap = "allow"
ref_option = "allow"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
