[package]
name = "ontology-map"
version = "0.1.0"
description = "Ontology Map — Spatial Software Engineering"
authors = ["Gustavo Schneiter"]
license = "MIT"
repository = "https://github.com/gustavoschneiter/ontology-cockpit"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4" }

[dependencies]
# Tauri core
tauri = { version = "2.10.0", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# File watching
notify = { version = "7", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.5"

# Async
tokio = { version = "1", features = ["full"] }

# Logging
log = "0.4"

# Parallelism
rayon = "1.10"

# Configuration
toml = "0.8"
dirs = "6"

# Error handling
thiserror = "2"
anyhow = "1"

# File traversal
walkdir = "2"

# Regex (for fast heuristic adapters)
regex = "1"

# Glob patterns
globset = "0.4"

# Date/time
chrono = "0.4"

# tree-sitter (TODO: enable for full AST parsing)
# tree-sitter = "0.24"
# tree-sitter-python = "0.23"
# tree-sitter-javascript = "0.23"
# tree-sitter-typescript = "0.23"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
